# Change Log
[Chili Bullet Weapons](https://iunius118.github.io/ChiliBulletWeapons/).
[Source](https://github.com/Iunius118/ChiliBulletWeapons).

## [Unreleased]

### Changed
- Increase composting chance of half-sized chili potato sandwich.

## [1.1.0]
- Require Minecraft 1.20.2+ and Forge.

### Added
- Chili bullet gun with bayonet.

### Changed
- Rename `Chili Pepper Seeds` to `Chili Pepper Seeds (CBW)`.
- Change gun item textures.

## [1.0.2]
- Require Minecraft 1.20.2+ and Forge.

### Changed
- Change mod icon.

### Fixed
- Fix ammo consumption when loading machine gun.

## [1.0.1]
- Require Minecraft 1.20.2+ and Forge.

### Fixed
- Fix loot table addition so that short grass can drop curved chili pepper in 1.20.3+.

## [1.0.0]
- Initial public release.
- Require Minecraft 1.20.2 and Forge 48.1.0.