@@ -1,4 +1,4 @@
-// 1.20.2	2024-02-23T13:52:48.3980882	Recipes
+// 1.20.2	2024-03-14T20:38:36.7732151	Recipes
 8cc901569c970db6a888b446879bb1e4ff5944e4 data/chilibulletweapons/advancements/recipes/combat/bayoneted_gun.json
 e4695735a7f18dd8ac13832b21365e61d20933b0 data/chilibulletweapons/advancements/recipes/combat/bayoneted_gun_upgrading.json
 49b64d298cf5b719096b1b798ef1e5527dffc463 data/chilibulletweapons/advancements/recipes/combat/chili_bullet.json
@@ -12,15 +12,23 @@ aeb7d1a5f28c4086f2d077249a6aa42b3dfa7022 data/chilibulletweapons/advancements/re
 de6a994db9da13127d31ee4f3568600264de2867 data/chilibulletweapons/advancements/recipes/food/half_chili_fish_sandwich.json
 430049e08c28db2d9fe32de6334dd5f8a35ccb93 data/chilibulletweapons/advancements/recipes/food/half_chili_meat_sandwich.json
 3d285467ea7bfcef29151e0e9b2398728aaf1d00 data/chilibulletweapons/advancements/recipes/food/half_chili_potato_sandwich.json
+099e15183275682c0718612d7fb30b2b595fc0ef data/chilibulletweapons/advancements/recipes/misc/bullet_chili_from_sack.json
+e2917ade5f37e5807c92290a0adaa83cbb032b68 data/chilibulletweapons/advancements/recipes/misc/bullet_chili_sack.json
 eb0d73a1d3f05e65899f9a7a91864ee33dc2f7bd data/chilibulletweapons/advancements/recipes/misc/chili_seeds.json
+b83613acead90f964fbbd4e0130729b4edb296a5 data/chilibulletweapons/advancements/recipes/misc/curved_chili_from_sack.json
+ff1ec9b22fa0025e84480abbe64130f6a547dcf1 data/chilibulletweapons/advancements/recipes/misc/curved_chili_sack.json
 66122f0136e1a4144fd06d078d817860808ff3d2 data/chilibulletweapons/recipes/bayoneted_gun.json
 effeb35e01257e8c2751582cd9e40a2fce7b05db data/chilibulletweapons/recipes/bayoneted_gun_upgrading.json
+60dbca9953956dbf28cd3b6c59b4e37a30c4f693 data/chilibulletweapons/recipes/bullet_chili_from_sack.json
+97235932162f4d9cb93806ef85c7e89775247963 data/chilibulletweapons/recipes/bullet_chili_sack.json
 f51652659b03401db01b010acc39813e271175fe data/chilibulletweapons/recipes/chili_bullet.json
 cd9b01a373142bf2a6b654911c71ea3abcdd1e7f data/chilibulletweapons/recipes/chili_chicken_sandwich.json
 49ea7c5ce4ad8b0a4253e954e6fef16fa921575c data/chilibulletweapons/recipes/chili_fish_sandwich.json
 e5cbfecefcfb9539a4a2963e548d8aff4c4ecc66 data/chilibulletweapons/recipes/chili_meat_sandwich.json
 ca19e426945362dd42170edd4aaa64be8606f966 data/chilibulletweapons/recipes/chili_potato_sandwich.json
 1b2a3529775774f400cdcb4d766218ac8f646c57 data/chilibulletweapons/recipes/chili_seeds.json
+85ef522782e89175989765eacb12ccf4fc466df9 data/chilibulletweapons/recipes/curved_chili_from_sack.json
+beb06a5638ca9fad17edd0336bcbe5b7080c723a data/chilibulletweapons/recipes/curved_chili_sack.json
 5773a14b66239f73389ed4622fa6ab4bf02e08d4 data/chilibulletweapons/recipes/fried_chili_pepper.json
 eb6a06d71e7be557d85bf5852e04a2adf9eebff4 data/chilibulletweapons/recipes/gun.json
 835879ec7dea1617d89ed60ee7774e29831c1283 data/chilibulletweapons/recipes/half_chili_chicken_sandwich.json
