@@ -1,2 +1,2 @@
-// 1.20.2	2024-02-23T13:52:48.4000873	Languages: en_us
-c2e18aa807da03c855af015010a3b5b5c1c9008b assets/chilibulletweapons/lang/en_us.json
+// 1.20.2	2024-03-14T20:38:36.779434	Languages: en_us
+98f99d7c4e61a9fc6e83d84d428bc365f6f33666 assets/chilibulletweapons/lang/en_us.json
