@@ -1,0 +1,13 @@
+{
+  "type": "minecraft:crafting_shapeless",
+  "category": "misc",
+  "ingredients": [
+    {
+      "item": "chilibulletweapons:curved_chili_sack"
+    }
+  ],
+  "result": {
+    "count": 9,
+    "item": "chilibulletweapons:curved_chili"
+  }
+}
